pkg/front_end/testcases/inference_new/strongly_connected_component.dart.strong.expect
library test;
//
// Problems in library:
//
// pkg/front_end/testcases/inference_new/strongly_connected_component.dart:16:5: Error: Can't infer the type of 'x': circularity found during type inference.
// Specify the type explicitly.
// var x = () => f() ? y : z;
//     ^
//
// pkg/front_end/testcases/inference_new/strongly_connected_component.dart:7:13: Error: A value of type 'Null' can't be returned from a function with return type 'bool'.
// bool f() => null;
//             ^
//
import self as self;
import "dart:core" as core;

static field invalid-type x = () → () → invalid-type => self::f() ?{() → invalid-type} self::y : self::z;
static field () → invalid-type y = () → invalid-type => self::x;
static field () → invalid-type z = () → invalid-type => self::x;
static method f() → core::bool
  return invalid-expression "pkg/front_end/testcases/inference_new/strongly_connected_component.dart:7:13: Error: A value of type 'Null' can't be returned from a function with return type 'bool'.
bool f() => null;
            ^" in null as{TypeError} core::bool;
static method main() → dynamic {}
